--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+.root {
+  flex-grow: 1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav {
+  margin-bottom: 16px; /* Assuming theme.spacing(2) equals 16px */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title {
+  flex-grow: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.link {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 8px; /* Assuming theme.spacing(2) equals 16px */
+  margin-right: 8px; /* Assuming theme.spacing(2) equals 16px */
 }
 
-.App-link {
-  color: #61dafb;
+.link:hover {
+  text-decoration: underline;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contentContainer {
+  margin-top: 16px; /* Assuming theme.spacing(2) equals 16px */
 }
